<resources>
    <string name="app_name">DollyPassengerApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="backBtn">Back</string>
    <string name="nextBtn">Next</string>
    <string name="signup" translatable="false">Sign Up</string>
    <string name="login">Log In</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
