<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="201dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="171dp" />

    <EditText
        android:id="@+id/usrPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="191dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        tools:text="@string/password" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="96dp"
        android:text="@string/signUp"
        tools:text="@string/signup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userEmail"
        android:layout_alignLeft="@+id/userEmail"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="17dp"
        android:text="Register Your Log in Detail" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userEmail"
        android:layout_alignLeft="@+id/userEmail"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="95dp"
        android:text="Back"
        tools:text="@string/backBtn" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userEmail"
        android:layout_alignLeft="@+id/userEmail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstName"
        tools:text="@string/firstName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/userEmail"
        android:layout_alignRight="@+id/userEmail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="123dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        tools:text="@string/surname" />

</RelativeLayout>